# Brush

./: .gitignore  Cargo.toml  README.md  art.FatDawlf.Brush.json  meson.build  meson_options.txt  shell.nix
data/: art.FatDawlf.Brush.desktop.in  art.FatDawlf.Brush.desktop.in.in  art.FatDawlf.Brush.gschema.xml  art.FatDawlf.Brush.metainfo.xml.in  art.FatDawlf.Brush.service.in  art.FatDawlf.Brush.service.in.in  art.FatDawlf.Brush.xml  brush.thumbnailer  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  config.rs  main.rs  meson.build
src/components/: canvas.rs  color_chip.rs  color_selector.rs  color_wheel.rs  editor.rs  editor_content.rs  layer_item.rs  layer_tree.rs  mod.rs  welcome.rs  window.rs
src/components/ui/: brush.gresource.xml  canvas.blp  color-selector.blp  editor-content.blp  editor.blp  layer-item.blp  layer-tree.blp  shortcuts-dialog.blp  style.css  styles.css  welcome.blp  window.blp
src/components/utils/: canvas.rs  color.rs  editor_state.rs  mod.rs  tools.rs
src/components/utils/renderer/: buffer.rs  mod.rs  program.rs  render.rs  shader.rs  shader_manager.rs  utils.rs
src/components/utils/renderer/glsl/: checkerboard.glsl  oklab2srgb.glsl  pixel.glsl  vert.glsl
src/data/: blend_modes.rs  file.rs  layer.rs  mod.rs  project.rs  rect.rs
src/data/layer_types/: fill.rs  filter.rs  group.rs  mod.rs  pixel.rs  refs.rs
src/data/layers/: fill.rs  filter.rs  group.rs  mod.rs  pixel.rs  refs.rs
