[package]
name = "brush"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

[dependencies]
# Utils
color = { version = "0.3", features = ["bytemuck"] }
uuid = { version = "1.22", features = ["v4"] }
ashpd = { version = "0.13", default-features = false, features = [
    "gtk4",
    "async-io",
    "file_chooser",
] }
url = { version = "2.5" }
zip = { version = "8.5" }
flate2 = { version = "1.1" }
image = { version = "0.25", features = ["avif-native"] }

strum = { version = "0.28", features = ["derive"] }
struct_iterable = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rayon = { version = "1.11" }

# Rendering and math
glow = { version = "0.17" }
glam = { version = "0.32" }
libloading = { version = "0.9" }
bytemuck = { version = "1.25" }

# UI
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.11", package = "gtk4", features = ["gnome_49"] }

[dependencies.adw]
package = "libadwaita"
version = "0.9"
features = ["v1_8"]
