application_id = 'art.FatDawlf.Brush'

scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_data(
  scalable_dir / ('@0@.svg').format(app_id),
  install_dir: get_option('datadir') / 'icons' / scalable_dir,
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
install_data(
  symbolic_dir / ('@0@-symbolic.svg').format(application_id),
  install_dir: get_option('datadir') / 'icons' / symbolic_dir,
)

actions_dir = 'hicolor' / 'scalable' / 'actions'
install_data(
  actions_dir / 'edit-undo-symbolic.svg',
  actions_dir / 'edit-redo-symbolic.svg',
  actions_dir / 'eraser3-symbolic.svg',
  actions_dir / 'move-tool-symbolic.svg',
  actions_dir / 'fill-tool-symbolic.svg',
  actions_dir / 'paintbrush-symbolic.svg',
  actions_dir / 'box-dotted-symbolic.svg',
  actions_dir / 'magic-wand-symbolic.svg',
  actions_dir / 'plus-large-symbolic.svg',
  actions_dir / 'box-outline-symbolic.svg',
  actions_dir / 'circle-dotted-symbolic.svg',
  actions_dir / 'circle-anchor-center-symbolic.svg',
  actions_dir / 'pointer-secondary-click-symbolic.svg',
  actions_dir / 'double-ended-arrows-horizontal-symbolic.svg',
  actions_dir / 'up-large-symbolic.svg',
  actions_dir / 'down-large-symbolic.svg',
  actions_dir / 'user-trash-symbolic.svg',
  actions_dir / 'floppy-symbolic.svg',
  actions_dir / 'folder-open-symbolic.svg',
  actions_dir / 'folder-visiting-symbolic.svg',
  actions_dir / 'document-new-symbolic.svg',
  actions_dir / 'sliders-horizontal-symbolic.svg',
  actions_dir / 'eye-outline-filled-symbolic.svg',
  actions_dir / 'eye-not-looking-symbolic.svg',
  actions_dir / 'transparent-background-symbolic.svg',
  actions_dir / 'opacity-symbolic.svg',
  actions_dir / 'padlock2-symbolic.svg',
  actions_dir / 'padlock2-open-symbolic.svg',
  actions_dir / 'arrow-pointing-away-from-line-down-symbolic.svg',
  actions_dir / 'arrow-pointing-at-line-down-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / actions_dir,
)
